// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`readFlight() reads "SW_77flqgg1" flight log correctly 1`] = `
Object {
  "coordinate": Array [
    7.01,
    51.01108333333333,
  ],
  "time": 1500111903000,
  "valid": true,
}
`;

exports[`readFlight() reads "SW_77flqgg1" flight log correctly 2`] = `
Object {
  "coordinate": Array [
    6.52835,
    50.866150000000005,
  ],
  "time": 1500118283000,
  "valid": true,
}
`;

exports[`readFlight() reads "SW_77flqgg1" flight log correctly 3`] = `
Object {
  "coordinate": Array [
    7.0655833333333335,
    51.09908333333333,
  ],
  "time": 1500128791000,
  "valid": true,
}
`;
